[gd_scene load_steps=5 format=2]

[ext_resource path="res://fighting/distributed_fighter/fighters/pepe_clone/AI/pepe_clone_ai.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 55.0364

[sub_resource type="CircleShape2D" id=2]
radius = 26.1725

[sub_resource type="CircleShape2D" id=3]
radius = 12.0416

[node name="controller" type="Node2D"]
script = ExtResource( 1 )
target_path = NodePath("../../bife")

[node name="mid_jump_detect" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="mid_jump_detect"]
scale = Vector2( 1.23742, 0.15394 )
shape = SubResource( 1 )

[node name="low_jump_detect" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="low_jump_detect"]
scale = Vector2( 1.14892, 0.194855 )
shape = SubResource( 2 )

[node name="hit_detect" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_detect"]
scale = Vector2( 1.02412, 0.459867 )
shape = SubResource( 3 )
